Door visible on canvas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Myrddin's Quest</title>
+    <title>Zaubererspiel</title>
     <link rel="stylesheet" href="./css/reset_stylesheet.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/win_screen.css" />
     <link
       rel="icon"
-      href="./assets/img/game_items/magic.png"
+      href="./assets/img/game_items/heart.png"
       type="image/x-icon"
     />
     <script src="./js/image-data.js"></script>
