Enemies, items and endboss placed on canvas. Items with float animation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="./models/enemy/snake.class.js" defer></script>
     <script src="./models/environments/key.class.js" defer></script>
     <script src="./models/environments/poison.class.js" defer></script>
+    <script src="./models/environments/heart.class.js" defer></script>
     <script src="./models/environments/trap.class.js" defer></script>
     <script src="./models/environments/crystal.class.js" defer></script>
     <script src="./js/level1.js" defer></script>
