HUD elements completed

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <script src="./models/drawable-object.class.js" defer></script>
     <script src="./models/movable-object.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
-    <script src="./models/environments/statusbar.class.js" defer></script>
+    <script src="./models/environment/statusbar.class.js" defer></script>
     <script src="./models/throwable-object.class.js" defer></script>
-    <script src="./models/environments/door.class.js" defer></script>
+    <script src="./models/environment/door.class.js" defer></script>
     <script src="./models/character.class.js" defer></script>
-    <script src="./models/enemy/enemy.class.js" defer></script>
     <script src="./models/enemy/knight.class.js" defer></script>
     <script src="./models/enemy/endboss.class.js" defer></script>
     <script
-      src="./models/environments/background-object.class.js"
+      src="./models/environment/background.class.js"
       defer
     ></script>
-    <script src="./models/environments/key.class.js" defer></script>
-    <script src="./models/environments/poison.class.js" defer></script>
-    <script src="./models/environments/heart.class.js" defer></script>
-    <script src="./models/environments/trap.class.js" defer></script>
+    <script src="./models/environment/key.class.js" defer></script>
+    <script src="./models/environment/poison.class.js" defer></script>
+    <script src="./models/environment/heart.class.js" defer></script>
+    <script src="./models/environment/trap.class.js" defer></script>
+    <script src="./models/environment/tick-icon.class.js" defer></script>
     <script src="./js/level1.js" defer></script>
     <script src="./js/endgame.class.js" defer></script>
     <script src="./models/keyboard.class.js" defer></script>
