Background decoration candles and skulls added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       src="./models/environment/background.class.js"
       defer
     ></script>
+    <script src="./models/environment/candle.class.js" defer></script>
+    <script src="./models/environment/skull.class.js" defer></script>
     <script src="./models/environment/key.class.js" defer></script>
     <script src="./models/environment/poison.class.js" defer></script>
     <script src="./models/environment/heart.class.js" defer></script>
