Character collects items; sounds preloaded; some sounds integrated into game

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       href="./assets/img/game_items/heart.png"
       type="image/x-icon"
     />
-    <script src="./js/image-data.js"></script>
-    <script src="./js/templates.js"></script>
+    <script src="./js/image-data.js" defer></script>
+    <script src="./js/sound-data.js" defer></script>
+    <script src="./js/sound.js" defer></script>
+    <script src="./js/templates.js" defer></script>
     <script src="./models/drawable-object.class.js" defer></script>
     <script src="./models/movable-object.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
@@ -26,10 +28,7 @@
     <script src="./models/character.class.js" defer></script>
     <script src="./models/enemy/knight.class.js" defer></script>
     <script src="./models/enemy/endboss.class.js" defer></script>
-    <script
-      src="./models/environment/background.class.js"
-      defer
-    ></script>
+    <script src="./models/environment/background.class.js" defer></script>
     <script src="./models/environment/candle.class.js" defer></script>
     <script src="./models/environment/skull.class.js" defer></script>
     <script src="./models/environment/key.class.js" defer></script>
@@ -40,7 +39,7 @@
     <script src="./js/level1.js" defer></script>
     <script src="./js/endgame.class.js" defer></script>
     <script src="./models/keyboard.class.js" defer></script>
-    <script src="./models/music.js" defer></script>
+
     <script src="./models/collisionHandler.class.js" defer></script>
     <script src="./models/world.class.js" defer></script>
     <script src="./js/game.js" defer></script>
