--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./js/sound-data.js" defer></script>
     <script src="./js/sound.js" defer></script>
     <script src="./js/templates.js" defer></script>
+    <script src="./models/collision-handler.class.js" defer></script>
     <script src="./models/drawable-object.class.js" defer></script>
     <script src="./models/movable-object.class.js" defer></script>
     <script src="./models/level.class.js" defer></script>
@@ -41,6 +42,7 @@
     <script src="./models/keyboard.class.js" defer></script>
 
     <script src="./models/world.class.js" defer></script>
+
     <script src="./js/game.js" defer></script>
   </head>
 
