Winner and loser screens created with play again button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media_queries.css" />
-    <link rel="stylesheet" href="./css/game_over.css" />
-    <link rel="stylesheet" href="./css/win_screen.css" />
+    <link rel="stylesheet" href="./css/endgame_screens.css" />
     <link
       rel="icon"
       href="./assets/img/game_items/heart.png"
@@ -100,6 +99,7 @@
         <div id="startScreen" class="start-screen">
           <div id="start_container" class="start-container"></div>
         </div>
+        <div id="end_screen"></div>
       </div>
       <div class="rotate-screen">
         <img src="./assets/img/game_ui/device-mobile-phone.png" alt="" />
