Music and noises can be toggled; gamer choice stored in local storage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/endgame_screens.css" />
     <link
       rel="icon"
-      href="./assets/img/game_items/heart.png"
+      href="./assets/img/game_items/magic.png"
       type="image/x-icon"
     />
     <script src="./js/image-data.js" defer></script>
@@ -57,41 +57,41 @@
           class="canvas d-none"
         ></canvas>
         <div id="gameButtons" class="game-buttons d-none">
-          <img
+<!--           <img
             onclick="handleFullscreenToggle()"
             id="fullscreenImg"
             src="./assets/img/app_icons/arrow_up_orange.png"
             height="50"
-          />
-          <img
+          /> -->
+<!--           <img
             onclick="toggleMuteImg()"
             id="mute"
             src="./assets/img/app_icons/sound_off_orange.png"
             height="50"
-          />
+          /> -->
         </div>
         <div id="btnsContainer" class="btns-container d-none">
           <div class="btns-left-side">
             <img
               id="btnLeft"
-              src="./assets/img/app_icons/arrow-left.png"
+              src="./assets/img/game_ui/arrow-left.png"
               width="60"
             />
             <img
               id="btnJump"
-              src="./assets/img/app_icons/arrow-up.png"
+              src="./assets/img/game_ui/arrow-up.png"
               width="60"
             />
           </div>
           <div class="btns-right-side">
-            <img
+<!--             <img
               id="btnPoison"
               src="./assets/img/app_icons/poison-bottle.png"
               width="60"
-            />
+            /> -->
             <img
               id="btnRight"
-              src="./assets/img/app_icons/arrow-right.png"
+              src="./assets/img/game_ui/arrow-right.png"
               width="60"
             />
           </div>
